@@ -1234,7 +1234,7 @@
          </p>
 
          <p><a name="defaultlabelincrementer"><span class="small">DefaultLabelIncrementer</span><br>
-         A label incrementer that uses the format string.number.
+         A label incrementer that uses the format string.number. Provides default label of "build.1".
          </p>
          <table cellpadding="3" cellspacing="1" border="0">
             <tr>
@@ -1255,7 +1255,7 @@
          </table>
 
          <p><a name="cvslabelincrementer"><span class="small">CVSLabelIncrementer</span><br>
-         An extension of DefaultLabelIncrementer but with separator set to "-" by default. Classname is <code>net.sourceforge.cruisecontrol.labelincrementers.CVSLabelIncrementer</code>
+         An extension of DefaultLabelIncrementer but with separator set to "-" by default. Provides default label of "build-1". Classname is <code>net.sourceforge.cruisecontrol.labelincrementers.CVSLabelIncrementer</code>
          </p>
 
          <p><a name="emptylabelincrementer"><span class="small">EmptyLabelIncrementer</span><br>
